# deferred_decals

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TAGS
.github/workflows/: cmake-single-platform.yml
res/assets/: axis.blend  room.blend  room.blend1  room.mtl  unit_cube.blend
res/shaders/: deferred_decal.glsl  deferred_frag.glsl  deferred_vert.glsl  frag.glsl  gbuffer_frag.glsl  vert.glsl
src/: decals.c  defines.h  mymath.c  mymath.h  myutils.c  myutils.h  objloader.c  objloader.h  renderer.c  renderer.h
